footer spacing fix

--- a/frontend/src/components/footer/footer.scss
+++ b/frontend/src/components/footer/footer.scss
@@ -3,7 +3,7 @@
 .footer {
 	bottom: 0;
 	width: 100%;
-	height: 300px;
+	height: 200px;
 	margin-top: 100px;
 }
 
